# bytepay

./: .env.development  .env.production  .env.test  .eslintrc.js  .gitignore  .travis.yml  Dockerfile  Dockerfile-test  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
cloudfuncs/TestNearApi/: index.ts  meta.json
cloudfuncs/api-account-info/: index.ts  meta.json
cloudfuncs/api-transaction-record/: meta.json
cloudfuncs/bind_github_repo/: index.ts  meta.json
cloudfuncs/block_service_impl_acala/: index.ts  meta.json
cloudfuncs/block_service_impl_near/: index.ts  meta.json
cloudfuncs/block_service_impl_polka/: index.ts
cloudfuncs/encrypt_mnemonic/: index.ts  meta.json
cloudfuncs/get-ipfs-cid/: index.ts  meta.json
cloudfuncs/get_binded_repos/: index.ts  meta.json
cloudfuncs/get_dev_tasks/: index.ts
cloudfuncs/get_developer_token_for_test/: index.ts
cloudfuncs/get_github_repos/: index.ts  (+1 more)
collections/: sys_config.json  user.json
contract/near/: Cargo.toml  README.md  ava.config.cjs  babel.config.json  encode_cell.js  package.json
contract/near/__test__/: test-main.ava.js
contract/near/src/: bytepay-contract.js  lib.rs
dev/: .editorconfig  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
server/: Dockerfile  app.json  init.js
smart-contract/: Cargo.toml  lib.rs
src/: App.vue  env.d.ts  main.ts
tests/: config.js  github-request.js  request.js
web/: .env.development  .env.production  .env.test  .eslintignore  index.html  nginx.conf  nginx.conf.prod  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+273 files in other folders)
