[package]
name = "bytepay-near"
version = "0.1.0"
authors = ["略"]
edition = "2021"

# 在以下位置查看更多键及其定义 https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
# 告诉 rustc 优化小代码大小。
opt-level = "z"
lto = true
debug = false
panic = "abort"
# 选择对算术运算进行额外的安全检查 https://stackoverflow.com/a/64136471/249801
overflow-checks = true
